@@ -82,6 +82,9 @@ RELEASE 0.97 - XXX
   - On Win32, install scons.bat in the Python directory when installing
     from setup.py.  (The bdist_wininst installer was already doing this.)
 
+  - Fix env.SConscript() when called with a list of SConscipt files.
+    (The SConscript() global function already worked properly.)
+
   From Clive Levinson:
 
   - Make ParseConfig() recognize and add -mno-cygwin to $LINKFLAGS and
